feat: add controller for GET /getbooks endpoint
Created a new controller with a GET endpoint to retrieve all books, along with test cases verifying the five-book response. Also added the spring-boot-starter-webmvc-test dependency to the pom.xml.

Closes #6

--- a/development-books-backend/pom.xml
+++ b/development-books-backend/pom.xml
@@ -30,6 +30,12 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <!-- MVC Test Slice -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-webmvc-test</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
