chore: add JaCoCo plugin and update tests for full coverage
Integrated the JaCoCo code coverage plugin and updated test cases to achieve 100% coverage across the project.

Closes #25

--- a/development-books-backend/pom.xml
+++ b/development-books-backend/pom.xml
@@ -89,6 +89,36 @@
                     </annotationProcessorPaths>
                 </configuration>
             </plugin>
+            <!-- JaCoCo plugin -->
+            <plugin>
+                <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
+                <version>0.8.12</version>
+                <executions>
+                    <!-- Attach JaCoCo agent to tests -->
+                    <execution>
+                        <id>prepare-agent</id>
+                        <goals>
+                            <goal>prepare-agent</goal>
+                        </goals>
+                    </execution>
+                    <!-- Generate report after tests -->
+                    <execution>
+                        <id>report</id>
+                        <phase>test</phase>
+                        <goals>
+                            <goal>report</goal>
+                        </goals>
+                        <configuration>
+                            <excludes>
+                                <exclude>**/DevelopmentbooksApplication.class</exclude>
+                                <exclude>org/openapitools/**</exclude>
+                                <exclude>com/bnpp/kata/developmentbooks/model/**</exclude>
+                            </excludes>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
     </build>
 </project>
